# micro-shop

./: .gitignore  alembic.ini  crud.py  items_views.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2023_09_03_1832-c9e562f01355_create_products_table.py  2023_09_03_1840-cfa2d1db2575_create_users_table.py  2023_09_03_1847-8c4e273b3221_create_posts_table.py  2023_09_03_1905-59b7b7bedc11_create_profile_table.py  2023_10_10_2245-6368f282e94a_create_orders_table.py  2023_10_10_2306-2f208240b707_create_order_product_association_table.py  2023_10_11_0000-b229632ccd6f_add_count_column_to_order_product_.py  2023_10_11_0023-09330442d56d_add_unit_price_column_to_order_product_.py
api_v1/: __init__.py
api_v1/demo_auth/: crud.py  demo_jwt_auth.py  helpers.py  validation.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: README.md  utils.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
