[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["Suren Khorenyan <surenkhorenyan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
pydantic = {extras = ["email"], version = "^2.0.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
aiosqlite = "^0.19.0"
pydantic-settings = "^2.0.3"
alembic = "^1.12.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
bcrypt = "^4.1.1"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
